examples/invalid/27_shorthand_variant_without_enum_expected_type.lane
// invalid: shorthand variant patterns require an expected enum type
module Examples.Invalid.ShorthandVariantWithoutEnumExpectedType

pub fn bad(value : Int) -> Int {
  match value {
    ::some(x) => x
  }
}
